--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dojo Sweeper</title>
+    <title>NinjaSweeper</title>
     <link rel="stylesheet" href="game.css">
 </head>
 <body>
-    <h2>Dojo Sweeper<h2>
+    <h2>Ninja Sweeper<h2>
     <div id="the-dojo">still loading... there may be an error</div>
     
     <div id="gameover"></div>
