Prep for pages upload.

--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
     <div id="the-dojo">still loading... there may be an error</div>
     
     <div id="gameover"></div>
-    <!-- Included for Styling visualization -->
-    <!-- <button id="restart" onclick="location.reload()">restart</button> -->
+    <a href="https://github.com/coren-frankel">Coren Frankel 2022</a>
     <script src="game.js"></script>
 </body>
 </html>
