--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="game.css">
 </head>
 <body>
-    <h2>Ninja Sweeper<h2>
+    <h2>Ninja Sweeper</h2>
     <div id="the-dojo">still loading... there may be an error</div>
     
     <div id="gameover"></div>
