Refactor grid init and add descriptive comments

--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
 </head>
 <body>
     <h2>Ninja Sweeper</h2>
-    <div id="the-dojo">still loading... there may be an error</div>
-    
+    <div id="the-dojo">Still loading... there may be an error</div>
     <div id="gameover"></div>
     <div><a href="https://github.com/coren-frankel">Coren Frankel 2022</a></div>
     <script src="game.js"></script>
