--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h2>Ninja Sweeper</h2>
     <div id="the-dojo">Still loading... there may be an error</div>
-    <div id="gameover"></div>
+    <div class="gameover"></div>
     <div><a href="https://github.com/coren-frankel">Coren Frankel 2022</a></div>
     <script src="game.js"></script>
 </body>
