--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="game.css">
 </head>
 <body>
-    <h2>Ninja Sweeper</h2>
+    <h2 id="title">Ninja Sweeper</h2>
     <div id="the-dojo">Still loading... there may be an error</div>
     <div class="gameover"></div>
     <div><a href="https://github.com/coren-frankel">Coren Frankel 2022</a></div>
