Add wow factor, adjust styles

--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NinjaSweeper</title>
     <link rel="stylesheet" href="game.css">
+    <!-- <meta name="theme-color" content="black"> -->
 </head>
 <body>
     <h2 id="title">Ninja Sweeper</h2>
     <div id="the-dojo">Still loading... there may be an error</div>
     <div class="gameover"></div>
-    <div><a href="https://github.com/coren-frankel">Coren Frankel 2022</a></div>
-    <script src="game.js"></script>
+    <cite id="github"><a href="https://github.com/coren-frankel" target="_blank" onmouseenter="wow()">Coren Frankel 2023</a></cite>
+    <script src="game.js" defer></script>
 </body>
 </html>
