--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
     <h2 id="title">Ninja Sweeper</h2>
     <div id="the-dojo">Still loading... there may be an error</div>
     <div class="gameover"></div>
-    <cite id="github"><a href="https://github.com/coren-frankel" target="_blank" onmouseenter="wow()">Coren Frankel 2023</a></cite>
+    <p id="github">
+        <a href="https://github.com/coren-frankel" target="_blank" onmouseenter="wow()">Coren Frankel 2023</a>
+    </p>
+    <cite>
+        <a href="https://www.flaticon.com/free-icons/ninja" title="ninja icons">Ninja icons created by Freepik - Flaticon</a>
+    </cite>
     <script src="game.js" defer></script>
 </body>
 </html>
