Refactored instructions display to hover over title

--- a/index.html
+++ b/index.html
@@ -8,14 +8,15 @@
     <!-- <meta name="theme-color" content="black"> -->
 </head>
 <body>
-    <h2 id="title">Ninja Sweeper</h2>
+    <h1 id="title">Ninja Sweeper</h1>
     <div id="the-dojo">Still loading... there may be an error</div>
     <div class="gameover"></div>
+    <div id="instr"></div>
     <p id="github">
-        <a href="https://github.com/coren-frankel" target="_blank" onmouseenter="wow()">Coren Frankel 2023</a>
+        <a href="https://github.com/coren-frankel" title="Coren Frankel's Github" target="_blank" onmouseenter="wow()">Coren Frankel 2023</a>
     </p>
     <cite>
-        <a href="https://www.flaticon.com/free-icons/ninja" title="ninja icons">Ninja icons created by Freepik - Flaticon</a>
+        <a href="https://www.flaticon.com/free-icons/ninja" title="ninja & bush icons" target="_blank">Ninja & Bush icons created by Freepik - Flaticon</a>
     </cite>
     <script src="game.js" defer></script>
 </body>
