Style changes; Refactor instructions display; begin tutorial build

--- a/index.html
+++ b/index.html
@@ -8,15 +8,18 @@
     <!-- <meta name="theme-color" content="black"> -->
 </head>
 <body>
-    <h1 id="title">Ninja Sweeper</h1>
-    <div id="the-dojo">Still loading... there may be an error</div>
+    <div id="header">
+        <h1 id="title">Ninja Sweeper</h1>
+        <button class="info" onclick="showTutorial()">i</button>
+    </div>
+    <div id="the-dojo">Still loading... try refreshing the page.</div>
     <div class="gameover"></div>
     <div id="instr"></div>
     <p id="github">
         <a href="https://github.com/coren-frankel" title="Coren Frankel's Github" target="_blank" onmouseenter="wow()">Coren Frankel 2023</a>
     </p>
     <cite>
-        <a href="https://www.flaticon.com/free-icons/ninja" title="ninja & bush icons" target="_blank">Ninja & Bush icons created by Freepik - Flaticon</a>
+        <a href="https://www.flaticon.com/free-icons/ninja" title="ninja icons" target="_blank">Ninja & Bush icons created by Freepik - Flaticon</a>
     </cite>
     <script src="game.js" defer></script>
 </body>
