Add tutorial function, with 1st phase of tutorial plus close button

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     <div id="the-dojo">Still loading... try refreshing the page.</div>
     <div class="gameover"></div>
     <div id="instr"></div>
+    <div id="tutorialWindow">
+        
+    </div>
     <p id="github">
         <a href="https://github.com/coren-frankel" title="Coren Frankel's Github" target="_blank" onmouseenter="wow()">Coren Frankel 2023</a>
     </p>
