Implement countdowns and repair ninja png error

--- a/index.html
+++ b/index.html
@@ -13,17 +13,16 @@
         <button class="info" onclick="showTutorial()">i</button>
     </div>
     <div id="the-dojo">Still loading... try refreshing the page.</div>
-    <div class="gameover"></div>
     <div id="instr"></div>
-    <div id="tutorialWindow">
-        
-    </div>
+    <div id="tutorialWindow"></div>
+    <div id="countdown"></div>
     <p id="github">
         <a href="https://github.com/coren-frankel" title="Coren Frankel's Github" target="_blank" onmouseenter="wow()">Coren Frankel 2023</a>
     </p>
     <cite>
         <a href="https://www.flaticon.com/free-icons/ninja" title="ninja icons" target="_blank">Ninja & Bush icons created by Freepik - Flaticon</a>
     </cite>
+    <div class="gameover"></div>
     <script src="game.js" defer></script>
 </body>
 </html>
