Add favicon; Refactor CSS for screen responsiveness; Add countdown info to tutorial

--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NinjaSweeper</title>
     <link rel="stylesheet" href="game.css">
-    <!-- <meta name="theme-color" content="black"> -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon_io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon_io/favicon-16x16.png">
+    <link rel="manifest" href="/assets/favicon_io/site.webmanifest">
 </head>
 <body>
     <div id="header">
@@ -20,7 +23,7 @@
         <a href="https://github.com/coren-frankel" title="Coren Frankel's Github" target="_blank" onmouseenter="wow()">Coren Frankel 2023</a>
     </p>
     <cite>
-        <a href="https://www.flaticon.com/free-icons/ninja" title="ninja icons" target="_blank">Ninja & Bush icons created by Freepik - Flaticon</a>
+        <a href="https://www.flaticon.com/free-icons/ninja" title="ninja icons" id="cred" target="_blank">Ninja & Bush icons created by Freepik - Flaticon</a>
     </cite>
     <div class="gameover"></div>
     <script src="game.js" defer></script>
