Revisit mobile screen responsiveness

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div id="header">
-        <h1 id="title">Ninja Sweeper</h1>
+        <h1 id="title" class="defTitle">Ninja Sweeper</h1>
         <button class="info" onclick="showTutorial()">i</button>
     </div>
     <div id="the-dojo">Still loading... try refreshing the page.</div>
