--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Ninja-themed Minesweeper Game">
+    <meta name="keywords" content="minesweeper, game, browser game, ninja, shuriken, mine, sweep">
+    <meta name="author" content="Coren Frankel"
     <title>NinjaSweeper</title>
     <link rel="stylesheet" href="game.css">
     <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon_io/apple-touch-icon.png">
